[package]
name = "passring-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.15", features = ["js"] }
hex = "0.4.3"
passring = { version = "0.1.0", path = "../passring" }
rand = "0.8.5"
serde-wasm-bindgen = "0.6.5"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
wasm-bindgen = "0.2.92"
